--- a/AppServSalud/src/main/resources/static/styles/footer.css
+++ b/AppServSalud/src/main/resources/static/styles/footer.css
@@ -1,25 +1,30 @@
-footer {
-  position: sticky;
-  align-items: end;
-  background-color: rgba(164, 215, 164, 0.959);
-  color: black;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,400;1,900&display=swap');
+
+* {
+  font-family: 'Roboto', sans-serif;
 }
 
+body {
+  background-image: linear-gradient(rgba(222, 240, 222, 0.75), rgba(138, 186, 138, 0.75)), url(../assets/HospitalHouse.png);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+}
 
-.footer_textos {
+#spinner {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
   display: flex;
-  margin: auto;
-  justify-content: space-around;
+  justify-content: center;
+  align-items: center;
+  display: none;
 }
 
-a {
-  color: rgb(66, 94, 58);
-  text-decoration: none;
+footer {
+  background-color: rgba(164, 215, 164, 0.959);
 }
-a:hover {
-  text-decoration: underline;
-}
-.titulos {
-  font-size: 25px;
-}
-
