--- a/AppServSalud/src/main/resources/templates/dashboardProfesional.html
+++ b/AppServSalud/src/main/resources/templates/dashboardProfesional.html
@@ -16,14 +16,11 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
         >
-        <link rel="stylesheet" th:href="@{/styles/footer.css}">
+        <link
+            rel="stylesheet"
+            th:href="@{/styles/footer.css}"
+        >
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,400;1,900&display=swap');
-
-            * {
-                font-family: 'Roboto', sans-serif;
-            }
-
             .toast-exito,
             .toast-error {
                 position: absolute;
@@ -37,9 +34,9 @@
                 transition: all 1s ease;
             }
         </style>
-
+        <script th:src="@{/js/dashProfesional.js}"></script>
     </head>
-    <body style="background-color: rgba(138, 186, 138, 0.75);">
+    <body>
         <header th:replace="/fragments/header :: header"></header>
         <div th:replace="/fragments/toast :: div"></div>
 
@@ -239,16 +236,10 @@
         </div>
         <footer th:replace="/fragments/footer :: footer"></footer>
         <script
-            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             crossorigin="anonymous"
         ></script>
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-            crossorigin="anonymous"
-        ></script>
-        <script th:src="@{/js/dashProfesional.js}"></script>
         <script th:src="@{/js/toast.js}"></script>
     </body>
 </html>
