--- a/AppServSalud/src/main/resources/templates/error_403.html
+++ b/AppServSalud/src/main/resources/templates/error_403.html
@@ -1,23 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Error 403 - Acceso prohibido</title>
-</head>
-<head th:replace="/fragments/head :: head"></head>
-<body>
-<header th:replace="/fragments/header :: header"></header>
-<h1>Error 403 - Acceso prohibido</h1>
-<p>No tienes permiso para acceder a esta página.</p>
-<script
-        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"
-></script>
-<script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-        crossorigin="anonymous"
-></script>
-</body>
+        <head th:replace="/fragments/head :: head"></head>
+        <body>
+                <header th:replace="/fragments/header :: header"></header>
+                <h1>Error 403 - Acceso prohibido</h1>
+                <p>No tienes permiso para acceder a esta página.</p>
+                <script
+                        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+                        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+                        crossorigin="anonymous"
+                ></script>
+        </body>
 </html>
