--- a/AppServSalud/src/main/resources/templates/forms/editarPaciente.html
+++ b/AppServSalud/src/main/resources/templates/forms/editarPaciente.html
@@ -3,7 +3,7 @@
     lang="es"
     xmlns:th="http://www.thymeleaft.org"
 >
-     <head>
+    <head>
         <meta charset="UTF-8">
         <title>Clinica House</title>
         <meta
@@ -16,9 +16,12 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
         >
-        <link rel="stylesheet" th:href="@{/styles/footer.css}">
+        <link
+            rel="stylesheet"
+            th:href="@{/styles/footer.css}"
+        >
     </head>
-    <body style="background-color: rgba(138, 186, 138, 0.75);">
+    <body>
         <header th:replace="/fragments/header :: header"></header>
         <div th:replace="/fragments/toast :: div"></div>
         <main>
@@ -277,8 +280,10 @@
                     style="background-color: rgba(17, 34, 17, 0.356);"
                 >
                     <div class="modal-dialog modal-dialog-centered">
-                        <div class="modal-content p-3"
-                            style="background-color: rgba(164, 215, 164, 0.959);">
+                        <div
+                            class="modal-content p-3"
+                            style="background-color: rgba(164, 215, 164, 0.959);"
+                        >
                             <form
                                 th:action="@{/paciente/cambiarContrasenha}"
                                 method="post"
@@ -358,13 +363,8 @@
         <footer th:replace="/fragments/footer :: footer"></footer>
 
         <script
-            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-            crossorigin="anonymous"
-        ></script>
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             crossorigin="anonymous"
         ></script>
         <script th:src="@{/js/toast.js}"></script>
