--- a/AppServSalud/src/main/resources/templates/fragments/footer.html
+++ b/AppServSalud/src/main/resources/templates/fragments/footer.html
@@ -1,7 +1,7 @@
 <footer>
-  <div class="footer_textos">
+  <div class="container d-flex justify-content-around">
     <div class="mt-3">
-      <h3 class="titulos">Direcciones</h3>
+      <h3>Direcciones</h3>
       <h6>Sede Central MediYa!</h6>
       <br>
       <p>Nameless 1234, Palermo, CABA.</p>
@@ -9,39 +9,40 @@
         <a
           href="https://wa.me/541122222222"
           target="_blank"
+          class="link-underline link-underline-opacity-0"
         >
           <img
             th:src="@{/assets/logoWpp.png}"
             alt="wpp"
-            width="75px"
+            width="45px"
           >
         </a>
         <b>Tel. +541122222222</b>
       </p>
-      <hr>
     </div>
-    <div>
-      <hr>
-      <h3 class="titulos">¡Seguinos!</h3>
+    <div class="mt-3">
+      <h3>¡Seguinos!</h3>
       <div class="seguinos">
         <a
           href="https://www.facebook.com/"
           target="_blank"
+          class="link-underline link-underline-opacity-0"
         >
           <img
             th:src="@{/assets/fbLogo.png}"
             alt="Facebook"
-            width="44px"
+            width="30px"
           >
         </a>
         <a
           href="https://www.instagram.com/"
           target="_blank"
+          class="link-underline link-underline-opacity-0"
         >
           <img
             th:src="@{/assets/igLogo.png}"
             alt="Instagram"
-            width="50px"
+            width="38px"
           >
         </a>
       </div>
@@ -51,6 +52,7 @@
         <a
           href="#"
           target="_blank"
+          class="link-underline link-underline-opacity-0"
         >
           <h6>Trabajá con nosotros</h6>
         </a>
