--- a/AppServSalud/src/main/resources/templates/infoTurnos.html
+++ b/AppServSalud/src/main/resources/templates/infoTurnos.html
@@ -1,140 +1,216 @@
 <!DOCTYPE html>
 <html
-        lang="es"
-        xmlns:th="http://www.thymeleaft.org"
-        xmlns="http://www.w3.org/1999/html">
-<head th:replace="/fragments/head :: head">
+    lang="es"
+    xmlns:th="http://www.thymeleaft.org"
+>
+    <head th:replace="/fragments/head :: head"></head>
 
-</head>
-
-<body>
-<header th:replace="/fragments/header :: header"></header>
-<div class="container content">
-    <div class="row">
-        <div class="col-md-8">
-            <div class="seccion-generica-general">
-                <h2><span style="font-size: 18pt;color: #006cb0"><strong>Turnos presenciales y consultas virtuales</strong></span></h2>
-                <p>&nbsp;</p>
-                <p>Solicitá tu turno ingresando a <span style="text-decoration: underline;font-size: 12pt"><span style="color: #006cb0"><a href="#">turnos</a></span></span> o llamando al teléfono <strong>111-1111-111</strong> de lunes a viernes de 8 a 20hs.</p>
-                <p>&nbsp;</p>
-                <hr>
-                <p style="text-align: center"><strong>Optimizá tu tiempo</strong> . Al finalizar tu consulta gestióná tus turnos para prácticas médicas complementarias o nuevas consultas ese mismo día.</p>
-                <hr>
-                <h2></h2>
-                <h2><span style="color: #006cb0"><strong><span style="font-size: 18pt">Portal de Pacientes</span></strong></span></h2>
-                <p>&nbsp;</p>
-
-                <div class="accordion" id="accordionExample" style="color:blue;">
-                    <div class="accordion-item">
-                        <h2 class="accordion-header">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                ¿Cómo crear mi cuenta?
-                            </button>
-                        </h2>
-                        <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-                            <div class="accordion-body">
-                                <strong>Pasos para crear Cuenta</strong> Para crear una cuenta primero debreas dirigirte a registrarce ,
-                                luego cargar tus datos personales que encontraras en el fomrulario , y luego ingresar.
-                                Ya con esto tendras acceso a todos los servicios.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                ¿Cómo reservar mis turnos?
-                            </button>
-                        </h2>
-                        <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                            <div class="accordion-body">
-                                <strong>Pasos para reservar Turnos.</strong> Lo primero que deberas hacer es ingrear con tus credenciales(email,password), si aun no las tienes revisa ¿Como Crear Una Cuenta?.
-                                Luego de ingresar dirijete ala seccion turnos , donde encontraras la oferta de profesionales y con sus dias y horarios de atencion, tan solo tiene que elejir ,
-                                el dia y horario que se ajusten a ti .
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                ¿Cómo ver y descargar los resultados de mis estudios?
-                            </button>
-                        </h2>
-                        <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                            <div class="accordion-body">
-                                <strong>EN DESARROLLO</strong> Estamos trabajando para brindar una mejor experiencia de uso, gracias por su interes .
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
-        <div class="col-md-4" style="margin:0 auto;">
-            <div class="bloque-informacion-generica">
-                <div class="informacion-util-generica">
-                    <h1> Información Útil </h1>
-                    <div class="informacion-util-generica-bloque">
-                        <h2> Cerro </h2>
-                        <!-- Insertar Sede de Sucursal <p> <strong> Dirección: </strong> </*?php echo $sede_address;?> </p> -->
-                        <p><strong>Ubicación: </strong>Pedro Simón Laplace 5749, esq. Blas Pascal – Villa Belgrano- Córdoba</p>
-                        <p><strong>Teléfono:&nbsp;</strong>0810-132-1234</p>
-                        <p><strong><span class="" data-color-group="turquoise">Horarios:</span></strong> Lunes a viernes de 8 a 20 hs.</p>
-                        <p><strong><span class="" data-color-group="turquoise">Email:</span> </strong>hospitalhouse@mailcom</p>
-                        <hr>
-                        <p style="text-align: center">Ver el listado de <strong>Obras Sociales</strong> y <strong>Prepagas</strong> haciendo clic
-                            <button type="button" class="btn text-primary" data-bs-toggle="modal" data-bs-target="#obrasSociales">
-                                <strong>AQUÍ</strong>
-                              </button>
-                        </p>
-                        <p style="text-align: center">Ver el listado de <b>Especialidad Médicas</b>&nbsp;haciendo clic <a href="/especialidades"><strong>AQUÍ</strong></a></p>
-                        <hr>
+    <body>
+        <header th:replace="/fragments/header :: header"></header>
+        <div class="container content">
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="seccion-generica-general">
+                        <h2><span style="font-size: 18pt;color: #006cb0"><strong>Turnos presenciales y consultas
+                                    virtuales</strong></span></h2>
                         <p>&nbsp;</p>
-                        <!-- Insertar Mapa de Google <a href="https://www.google.com/maps/search/</*?php echo $sede_address;?>" target="_blank"> <i class="fas fa-map-marker-alt"></i> Mapa </a>-->
+                        <p>Solicitá tu turno ingresando a <span style="text-decoration: underline;font-size: 12pt"><span
+                                    style="color: #006cb0"
+                                ><a href="#">turnos</a></span></span> o llamando al teléfono
+                            <strong>111-1111-111</strong> de lunes a viernes de 8 a 20hs.
+                        </p>
+                        <p>&nbsp;</p>
+                        <hr>
+                        <p style="text-align: center"><strong>Optimizá tu tiempo</strong> . Al finalizar tu consulta
+                            gestióná tus turnos para prácticas médicas complementarias o nuevas consultas ese mismo día.
+                        </p>
+                        <hr>
+                        <h2></h2>
+                        <h2><span style="color: #006cb0"><strong><span style="font-size: 18pt">Portal de
+                                        Pacientes</span></strong></span></h2>
+                        <p>&nbsp;</p>
+
+                        <div
+                            class="accordion"
+                            id="accordionExample"
+                            style="color:blue;"
+                        >
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button
+                                        class="accordion-button"
+                                        type="button"
+                                        data-bs-toggle="collapse"
+                                        data-bs-target="#collapseOne"
+                                        aria-expanded="true"
+                                        aria-controls="collapseOne"
+                                    >
+                                        ¿Cómo crear mi cuenta?
+                                    </button>
+                                </h2>
+                                <div
+                                    id="collapseOne"
+                                    class="accordion-collapse collapse show"
+                                    data-bs-parent="#accordionExample"
+                                >
+                                    <div class="accordion-body">
+                                        <strong>Pasos para crear Cuenta</strong> Para crear una cuenta primero debreas
+                                        dirigirte a registrarce ,
+                                        luego cargar tus datos personales que encontraras en el fomrulario , y luego
+                                        ingresar.
+                                        Ya con esto tendras acceso a todos los servicios.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button
+                                        class="accordion-button collapsed"
+                                        type="button"
+                                        data-bs-toggle="collapse"
+                                        data-bs-target="#collapseTwo"
+                                        aria-expanded="false"
+                                        aria-controls="collapseTwo"
+                                    >
+                                        ¿Cómo reservar mis turnos?
+                                    </button>
+                                </h2>
+                                <div
+                                    id="collapseTwo"
+                                    class="accordion-collapse collapse"
+                                    data-bs-parent="#accordionExample"
+                                >
+                                    <div class="accordion-body">
+                                        <strong>Pasos para reservar Turnos.</strong> Lo primero que deberas hacer es
+                                        ingrear con tus credenciales(email,password), si aun no las tienes revisa ¿Como
+                                        Crear Una Cuenta?.
+                                        Luego de ingresar dirijete ala seccion turnos , donde encontraras la oferta de
+                                        profesionales y con sus dias y horarios de atencion, tan solo tiene que elejir ,
+                                        el dia y horario que se ajusten a ti .
+                                    </div>
+                                </div>
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header">
+                                        <button
+                                            class="accordion-button collapsed"
+                                            type="button"
+                                            data-bs-toggle="collapse"
+                                            data-bs-target="#collapseThree"
+                                            aria-expanded="false"
+                                            aria-controls="collapseThree"
+                                        >
+                                            ¿Cómo ver y descargar los resultados de mis estudios?
+                                        </button>
+                                    </h2>
+                                    <div
+                                        id="collapseThree"
+                                        class="accordion-collapse collapse"
+                                        data-bs-parent="#accordionExample"
+                                    >
+                                        <div class="accordion-body">
+                                            <strong>EN DESARROLLO</strong> Estamos trabajando para brindar una mejor
+                                            experiencia de uso, gracias por su interes .
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div
+                    class="col-md-4"
+                    style="margin:0 auto;"
+                >
+                    <div class="bloque-informacion-generica">
+                        <div class="informacion-util-generica">
+                            <h1> Información Útil </h1>
+                            <div class="informacion-util-generica-bloque">
+                                <h2> Cerro </h2>
+                                <!-- Insertar Sede de Sucursal <p> <strong> Dirección: </strong> </*?php echo $sede_address;?> </p> -->
+                                <p><strong>Ubicación: </strong>Pedro Simón Laplace 5749, esq. Blas Pascal – Villa
+                                    Belgrano- Córdoba</p>
+                                <p><strong>Teléfono:&nbsp;</strong>0810-132-1234</p>
+                                <p><strong><span
+                                            class=""
+                                            data-color-group="turquoise"
+                                        >Horarios:</span></strong> Lunes a viernes de 8 a 20 hs.</p>
+                                <p><strong><span
+                                            class=""
+                                            data-color-group="turquoise"
+                                        >Email:</span> </strong>hospitalhouse@mailcom</p>
+                                <hr>
+                                <p style="text-align: center">Ver el listado de <strong>Obras Sociales</strong> y
+                                    <strong>Prepagas</strong> haciendo clic
+                                    <button
+                                        type="button"
+                                        class="btn text-primary"
+                                        data-bs-toggle="modal"
+                                        data-bs-target="#obrasSociales"
+                                    >
+                                        <strong>AQUÍ</strong>
+                                    </button>
+                                </p>
+                                <p style="text-align: center">Ver el listado de <b>Especialidad
+                                        Médicas</b>&nbsp;haciendo clic <a
+                                        href="/especialidades"><strong>AQUÍ</strong></a></p>
+                                <hr>
+                                <p>&nbsp;</p>
+                                <!-- Insertar Mapa de Google <a href="https://www.google.com/maps/search/</*?php echo $sede_address;?>" target="_blank"> <i class="fas fa-map-marker-alt"></i> Mapa </a>-->
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-</div>
 
-  <div class="modal fade" id="obrasSociales" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Listado de Obras Sociales</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-            <strong>OSECAC</strong>
-            <br>
-            <strong>OSPE</strong>
-            <br>
-            <strong>SWISS MEDICAL</strong>
-            <br>
-            <strong>SANCORSALUD</strong>
-            <br>
-            <strong>OSPRERA</strong>
-            <br>
-            <strong>UPCN</strong>
-            <br>
-            <strong>OSDE</strong>
-            <br>
-            <strong>OMIT</strong>
-            <br>
-            <strong>PARTICULAR</strong>
-        </div>
-      </div>
-    </div>
-  </div>
-<footer th:replace="/fragments/footer :: footer"></footer>
-<script
-        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"
-></script>
-<script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-        crossorigin="anonymous"
-></script>
-</body>
+            <div
+                class="modal fade"
+                id="obrasSociales"
+                tabindex="-1"
+                aria-labelledby="exampleModalLabel"
+                aria-hidden="true"
+            >
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5
+                                class="modal-title"
+                                id="exampleModalLabel"
+                            >Listado de Obras Sociales</h5>
+                            <button
+                                type="button"
+                                class="btn-close"
+                                data-bs-dismiss="modal"
+                                aria-label="Close"
+                            ></button>
+                        </div>
+                        <div class="modal-body">
+                            <strong>OSECAC</strong>
+                            <br>
+                            <strong>OSPE</strong>
+                            <br>
+                            <strong>SWISS MEDICAL</strong>
+                            <br>
+                            <strong>SANCORSALUD</strong>
+                            <br>
+                            <strong>OSPRERA</strong>
+                            <br>
+                            <strong>UPCN</strong>
+                            <br>
+                            <strong>OSDE</strong>
+                            <br>
+                            <strong>OMIT</strong>
+                            <br>
+                            <strong>PARTICULAR</strong>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <footer th:replace="/fragments/footer :: footer"></footer>
+            <script
+                src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+                crossorigin="anonymous"
+            ></script>
+    </body>
 </html>
