--- a/AppServSalud/src/main/resources/templates/turnoPaciente.html
+++ b/AppServSalud/src/main/resources/templates/turnoPaciente.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html
-        lang="es"
-        xmlns:th="http://www.thymeleaft.org"
-        xmlns="http://www.w3.org/1999/html">
-<head th:replace="/fragments/head :: head">
-
-</head>
-<body>
-<header th:replace="/fragments/header :: header">
-
-</header>
-    <h1>Aqui va la oferta del profesional</h1>
-</body>
+    lang="es"
+    xmlns:th="http://www.thymeleaft.org"
+>
+    <head th:replace="/fragments/head :: head"></head>
+    <body>
+        <header th:replace="/fragments/header :: header"></header>
+        <h1>Aqui va la oferta del profesional</h1>
+    </body>
 </html>
