--- a/AppServSalud/src/main/resources/templates/vistaPerfil.html
+++ b/AppServSalud/src/main/resources/templates/vistaPerfil.html
@@ -19,7 +19,10 @@
                     alt="pattern_card"
                     class="card-img-top"
                 >
-                <div class="card-header position-absolute mx-5 px-5 bg-transparent" style="border-bottom: none;">
+                <div
+                    class="card-header position-absolute mx-5 px-5 bg-transparent"
+                    style="border-bottom: none;"
+                >
                     <div class="avatar text-center mt-5 bt-5">
                         <img
                             th:src="@{/imagen/perfil/__${usuario.id}__}"
@@ -38,8 +41,14 @@
                 <article class="card-article mt-5">
                     <section class="card-body mt-3 text-center">
                         <h3>
-                            <span class="text-capitalize" th:text="${usuario.nombre}"></span>
-                            <span class="text-capitalize" th:text="${usuario.apellido}"></span>
+                            <span
+                                class="text-capitalize"
+                                th:text="${usuario.nombre}"
+                            ></span>
+                            <span
+                                class="text-capitalize"
+                                th:text="${usuario.apellido}"
+                            ></span>
                         </h3>
                         <hr>
                         <div>
@@ -108,13 +117,8 @@
         </div>
         <footer th:replace="/fragments/footer :: footer"></footer>
         <script
-            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-            crossorigin="anonymous"
-        ></script>
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             crossorigin="anonymous"
         ></script>
         <script th:src="@{/js/toast.js}"></script>
